[PNM-5] - Spacing for Header Nav, and outline fixes.

--- a/example/src/sass/_footer_copyright.scss
+++ b/example/src/sass/_footer_copyright.scss
@@ -4,6 +4,10 @@
   .footer-logo-container {
     @include pnm_style_footer_logo_container;
     @include pnm_struct_footer_logo_container;
+    a {
+      @include pnm_style_footer_logo_container_link;
+      @include pnm_struct_footer_logo_container_link;
+    }
   }
   .copyright-text {
     @include pnm_style_footer_copyright_text;
